--- a/templates/character.html
+++ b/templates/character.html
@@ -10,18 +10,24 @@
         <title>Baseshuttle</title>
     </head>
     <body>
-        <a href="/" class="home">&#8962;</a>
-        <div class="only_input">
-            <form method="POST">
-                <input
-                    type="text"
-                    name="name"
-                    placeholder="Name"
-                    required
-                    autofocus
-                    maxlength="24"
-                />
-            </form>
+        <div class="main">
+            <a href="/" class="home">&#8962;</a>
+            <div class="only_input">
+                <form method="POST">
+                    <input
+                        type="text"
+                        name="name"
+                        placeholder="Name"
+                        required
+                        autofocus
+                        maxlength="24"
+                    />
+                </form>
+            </div>
         </div>
+        <footer>
+            Powered by
+            <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+        </footer>
     </body>
 </html>
