--- a/templates/select.html
+++ b/templates/select.html
@@ -10,9 +10,15 @@
         <title>Baseshuttle</title>
     </head>
     <body>
-        <div class="only_input">
-            <a class="choose" href="/join">Beitreten</a>
-            <a class="choose" href="/create">Erstellen</a>
+        <div class="main">
+            <div class="only_input">
+                <a class="choose" href="/join">Beitreten</a>
+                <a class="choose" href="/create">Erstellen</a>
+            </div>
         </div>
+        <footer>
+            Powered by
+            <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+        </footer>
     </body>
 </html>
