--- a/templates/create.html
+++ b/templates/create.html
@@ -11,33 +11,50 @@
         <title>Baseshuttle</title>
     </head>
     <body>
-        <a href="/" class="home">&#8962;</a>
-        <div class="multi_input">
-            <form method="POST">
-                <label for="id">Session-ID:</label>
-                <input
-                    type="text"
-                    name="id"
-                    value="{{ session_id }}"
-                    readonly
-                />
-                <label for="url">Link zum Beitreten:</label>
-                <input type="text" name="url" value="{{ url }}" readonly />
-                <label for="card_counter">Anzahl an zufällig generierten Karten</label>
-                <input type="number" name="card_counter" value="{{ card_counter }}" required />
-                <label for="card_elements"
-                    >Karten (jede Zeile ist eine Karte):</label
-                >
-                <textarea rows="5" name="card_elements">
+        <div class="main">
+            <a href="/" class="home">&#8962;</a>
+            <div class="multi_input">
+                <form method="POST">
+                    <label for="id">Session-ID:</label>
+                    <input
+                        type="text"
+                        name="id"
+                        value="{{ session_id }}"
+                        readonly
+                    />
+                    <label for="url">Link zum Beitreten:</label>
+                    <input type="text" name="url" value="{{ url }}" readonly />
+                    <label for="card_counter"
+                        >Anzahl an zufällig generierten Karten</label
+                    >
+                    <input
+                        type="number"
+                        name="card_counter"
+                        value="{{ card_counter }}"
+                        required
+                    />
+                    <label for="card_elements"
+                        >Karten (jede Zeile ist eine Karte):</label
+                    >
+                    <textarea rows="5" name="card_elements">
 {{ card_elements }}</textarea
-                >
-                <input
-                    type="submit"
-                    name="refresh"
-                    value="Neu generieren!"
-                /><br />
-                <input type="submit" name="create" value="Spiel erstellen!" />
-            </form>
+                    >
+                    <input
+                        type="submit"
+                        name="refresh"
+                        value="Neu generieren!"
+                    /><br />
+                    <input
+                        type="submit"
+                        name="create"
+                        value="Spiel erstellen!"
+                    />
+                </form>
+            </div>
         </div>
+        <footer>
+            Powered by
+            <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+        </footer>
     </body>
 </html>
