--- a/templates/join.html
+++ b/templates/join.html
@@ -10,19 +10,25 @@
         <title>Baseshuttle</title>
     </head>
     <body>
-        <a href="/" class="home">&#8962;</a>
-        <div class="only_input">
-            <form method="POST">
-                <input
-                    type="text"
-                    name="id"
-                    placeholder="Session ID"
-                    maxlength="6"
-                    onkeyup="this.value = this.value.toUpperCase();"
-                    required
-                    autofocus
-                />
-            </form>
+        <div class="main">
+            <a href="/" class="home">&#8962;</a>
+            <div class="only_input">
+                <form method="POST">
+                    <input
+                        type="text"
+                        name="id"
+                        placeholder="Session ID"
+                        maxlength="6"
+                        onkeyup="this.value = this.value.toUpperCase();"
+                        required
+                        autofocus
+                    />
+                </form>
+            </div>
         </div>
+        <footer>
+            Powered by
+            <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+        </footer>
     </body>
 </html>
