--- a/templates/play.html
+++ b/templates/play.html
@@ -16,11 +16,17 @@
         <title>Baseshuttle</title>
     </head>
     <body>
-        <input type="hidden" id="my_id" value="{{ my_id }}" />
-        <div id="info_text"></div>
+        <div class="main">
+            <input type="hidden" id="my_id" value="{{ my_id }}" />
+            <div id="info_text"></div>
 
-        <div id="card_container"></div>
-        <div id="player_container"></div>
-        <div id="data_container"></div>
+            <div id="card_container"></div>
+            <div id="player_container"></div>
+            <div id="data_container"></div>
+        </div>
+        <footer>
+            Powered by
+            <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+        </footer>
     </body>
 </html>
