--- a/postsofcompliments/templates/play.html
+++ b/postsofcompliments/templates/play.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
-        <script src="{{ url_for('static', filename='javascript/play.js') }}"></script>
+        <script src="{{ url_for('postsofcompliments.static', filename='javascript/play.js') }}"></script>
         <link
             rel="stylesheet"
-            href="{{ url_for('static', filename='css/general.css')}}"
+            href="{{ url_for('postsofcompliments.static', filename='css/general.css')}}"
         />
         <link
             rel="stylesheet"
-            href="{{ url_for('static', filename='css/play.css')}}"
+            href="{{ url_for('postsofcompliments.static', filename='css/play.css')}}"
         />
         <title>Baseshuttle</title>
     </head>
