--- a/postsofcompliments/templates/join.html
+++ b/postsofcompliments/templates/join.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="{{ url_for('static', filename='css/general.css')}}"
+            href="{{ url_for('postsofcompliments.static', filename='css/general.css')}}"
         />
         <title>Baseshuttle</title>
     </head>
     <body>
         <div class="main">
-            <a href="/" class="home">&#8962;</a>
+            <a href="/postsofcompliments" class="home">&#8962;</a>
             <div class="only_input">
                 <form method="POST">
                     <input
