--- a/postsofcompliments/templates/select.html
+++ b/postsofcompliments/templates/select.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="{{ url_for('static', filename='css/general.css')}}"
+            href="{{ url_for('postsofcompliments.static', filename='css/general.css')}}"
         />
         <title>Baseshuttle</title>
     </head>
     <body>
         <div class="main">
             <div class="only_input">
-                <a class="choose" href="/join">Beitreten</a>
-                <a class="choose" href="/create">Erstellen</a>
+                <a class="choose" href="/postsofcompliments/join">Beitreten</a>
+                <a class="choose" href="/postsofcompliments/create">Erstellen</a>
             </div>
         </div>
         <footer>
