--- a/postsofcompliments/templates/play.html
+++ b/postsofcompliments/templates/play.html
@@ -17,12 +17,15 @@
     </head>
     <body>
         <div class="main">
+            <div id="session_id">Session-ID: <strong>{{ session_id }}</strong></div>
             <input type="hidden" id="my_id" value="{{ my_id }}" />
             <div id="info_text"></div>
 
             <div id="card_container"></div>
             <div id="player_container"></div>
             <div id="data_container"></div>
+            
+            
         </div>
         <footer>
             Powered by
