--- a/formular/templates/formular.html
+++ b/formular/templates/formular.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0026)https://bdkj-m.de/holywood -->
-<html lang="de">           
+<html lang="de">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
-        <title>Holywood-Gottesdienst am 07.03.2021</title>
+        <title>Holywood</title>
         <meta name="robots" content="noindex, nofollow" />
         <link
             rel="stylesheet"
@@ -37,7 +36,7 @@
                 </p>
             </header>
             <main>
-                <form method="post">
+                <form method="POST">
                     <div>
                         Für welche Uhrzeit möchtest du dich anmelden?
                         <div class="radio">
@@ -47,7 +46,7 @@
                                     id="time1"
                                     name="time"
                                     value="1"
-                                    required=""
+                                    required
                                 /><label for="time1"
                                     >18:00 Uhr<br /><i>0 Plätze frei</i></label
                                 >
@@ -58,7 +57,7 @@
                                     id="time2"
                                     name="time"
                                     value="2"
-                                    required=""
+                                    required
                                 /><label for="time2"
                                     >20:00 Uhr<br /><i>3 Plätze frei</i></label
                                 >
@@ -70,22 +69,14 @@
                             id="test"
                             type="email"
                             name="email"
-                            required=""
+                            required
                         />
                     </div>
                     <div>
-                        Vorname<input
-                            type="text"
-                            name="firstname"
-                            required=""
-                        />
+                        Vorname<input type="text" name="firstname" required />
                     </div>
                     <div>
-                        Nachname<input
-                            type="text"
-                            name="lastname"
-                            required=""
-                        />
+                        Nachname<input type="text" name="lastname" required />
                     </div>
                     <div>
                         Anmeldung von Begleitpersonen<br /><i
@@ -93,8 +84,8 @@
                             Hausstand)</i
                         >
                         <div class="select-wrapper">
-                            <select name="companions" required="">
-                                <option value="" disabled="" selected="">
+                            <select name="companions" required>
+                                <option value="" disabled selected>
                                     Bitte auswählen...
                                 </option>
                                 <option value="0">Keine Begleitperson</option>
@@ -108,7 +99,7 @@
                         ><input
                             type="checkbox"
                             name="privacy"
-                            required=""
+                            required
                         /><span class="checkbox"></span>Ich habe den
                         untenstehenden Datenschutzhinweis zur Kenntnis
                         genommen.</label
