finished formular with email confirmation

--- a/formular/templates/formular.html
+++ b/formular/templates/formular.html
@@ -48,7 +48,7 @@
                                     value="1"
                                     required
                                 /><label for="time1"
-                                    >18:00 Uhr<br /><i>0 Plätze frei</i></label
+                                    >18:00 Uhr<br /><i>{{ count_time1}} Plätze frei</i></label
                                 >
                             </div>
                             <div>
@@ -59,7 +59,7 @@
                                     value="2"
                                     required
                                 /><label for="time2"
-                                    >20:00 Uhr<br /><i>3 Plätze frei</i></label
+                                    >20:00 Uhr<br /><i>{{ count_time2}} Plätze frei</i></label
                                 >
                             </div>
                         </div>
