--- a/postsofcompliments/static/css/play.css
+++ b/postsofcompliments/static/css/play.css
@@ -30,14 +30,12 @@
 }
 
 .card {
-    background-color: var(--background-color);
     color: var(--primary-color);
     font-size: 200%;
-    margin: 10px;
     cursor: pointer;
     overflow: hidden;
-    border: 4px solid var(--grey);
-    padding: 5px 10%;
+    margin-left: 5px;
+    width: 10%;
 }
 
 
@@ -93,6 +91,7 @@
     }
     .card {
         font-size: 150%;
+        width: 45%;
     }
     .player {
         font-size: 159%;
