--- a/postsofcompliments/static/css/general.css
+++ b/postsofcompliments/static/css/general.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
 :root {
-    --primary-color: #11998e;
-    --background-color: #222222;
-    --grey: #9b9b9b;
+    --primary-color: #acacac;
+    --background-color: #00000000;
+    --grey: #696969;
     --select_color: yellow;
 }
 
@@ -14,17 +14,10 @@ body {
     background-color: var(--background-color);
     color: var(--primary-color);
     margin: 0;
+    background-repeat: repeat;
+    background-size: 200px;
 }
 
-body {
-    background: 
-    linear-gradient(135deg, var(--background-color) 25%, transparent 25%) -50px 0,
-    linear-gradient(225deg, var(--background-color) 25%, transparent 25%) -50px 0,
-    linear-gradient(315deg, var(--background-color) 25%, transparent 25%),
-    linear-gradient(45deg, var(--background-color) 25%, transparent 25%);	
-    background-size: 2em 2em;
-    background-color: #111111;
-}
 
 .only_input {
     display: block;
@@ -173,12 +166,12 @@ footer{
     position: fixed;
     bottom: 0;
     z-index: -1;
-    padding-left: 1em;
+    padding-left: 0.5em;
 }
 
-footer a {
-    color: orange;
-    text-decoration: none;
+footer a img {
+    width: 5vw;
+    max-width: 50px;
 }
 
 
