--- a/postsofcompliments/static/css/play.css
+++ b/postsofcompliments/static/css/play.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #11998e;
-    --background-color: #222222;
-    --grey: #9b9b9b;
+    --primary-color: #acacac;
+    --background-color: #00000000;
+    --grey: #696969;
     --select_color: yellow;
 }
 
@@ -35,7 +35,7 @@
     cursor: pointer;
     overflow: hidden;
     margin-left: 5px;
-    width: 10%;
+    width: 20%;
 }
 
 
