--- a/postsofcompliments/templates/play.html
+++ b/postsofcompliments/templates/play.html
@@ -13,6 +13,9 @@
       href="{{ url_for('postsofcompliments.static', filename='css/play.css')}}"
     />
     <title>Baseshuttle</title>
+    <style>
+      body {background-image: url('{{ url_for("postsofcompliments.static", filename="svg/blueprint_dark.svg") }}');}
+  </style>
   </head>
   <body>
     <div class="main">
@@ -25,8 +28,7 @@
       <div id="data_container"></div>
     </div>
     <footer>
-      Powered by
-      <a href="https://jonathanfroehlich.de">Jonathan Fröhlich</a>
+      <a href="https://jonathanfroehlich.de"><img src="{{ url_for('postsofcompliments.static', filename='svg/jf_logo.svg')}}"></a>
     </footer>
   </body>
   <script>
