--- a/postsofcompliments/templates/join.html
+++ b/postsofcompliments/templates/join.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="cache-control" content="no-cache" />
         <link
             rel="stylesheet"
             href="{{ url_for('postsofcompliments.static', filename='css/general.css')}}"
