--- a/postsofcompliments/templates/play.html
+++ b/postsofcompliments/templates/play.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="cache-control" content="no-cache" />
     <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
     <link
       rel="stylesheet"
