--- a/meterstab/templates/meterstab.html
+++ b/meterstab/templates/meterstab.html
@@ -1,160 +1,80 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
-        <title>Meterstab</title>
-        <meta name="robots" content="noindex, nofollow" />
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="{{ url_for('meterstab.static', filename='css/normalize.css') }}"
-        />
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="{{ url_for('meterstab.static', filename='css/style.css') }}"
-        />
-    </head>
-    <body>
-        <div id="site-inner">
-            <header>
-                <h1>Meterstab – Dein Karwochenbegleiter – Gottesdienst-Aktionen in der Jugendkirche</h1>
-                <p>
-                    Länge Di 30.3. 17:30 – 19:30 Gestaltungszeit für Deinen Meterstab (Gottesdienst) <br>
-                    Tiefe: Fr 02.04. 10:00 – 12:00 Uhr Zeitraum für Kreuzgestaltung (Gottesdienst)
-                </p>
-                <p>
-                    Aufgrund der staatlichen Maßnahmen zur Eindämmung des
-                    Coronavirus ist die Zahl der Gottesdienst-Besucher*innen
-                    beschränkt. Die Teilnahme ist nur nach vorheriger Anmeldung
-                    zulässig.
-                </p>
-                <p>
-                    <b>Hinweis:</b> Wenn Du an beiden Veranstaltungen teilnehmen möchtest, 
-                    fülle bitte für jeden Tag ein seperates Fromular aus.
-                </p>
-                <p>
-                    <b>Wichtig:</b> Die Anmeldung ist verbindlich. Solltest du
-                    doch nicht teilnehmen können oder wollen, dann storniere
-                    bitte deine Plätze über den Link in der Bestätigungsmail.
-                </p>
-            </header>
-            <main>
-                <form method="POST">
-                    <div>
-                        Für welchen Tag möchtest du dich anmelden?
-                        <div class="radio">
-                            <div>
-                                <input
-                                    type="radio"
-                                    id="time1"
-                                    name="time"
-                                    value="1"
-                                    required
-                                /><label for="time1"
-                                    >Dienstag<br /><i>{{ count_time1}} Plätze frei</i></label
-                                >
-                            </div>
-                            <div>
-                                <input
-                                    type="radio"
-                                    id="time2"
-                                    name="time"
-                                    value="2"
-                                    required
-                                /><label for="time2"
-                                    >Freitag<br /><i>{{ count_time2}} Plätze frei</i></label
-                                >
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        E-Mail-Adresse<input
-                            id="test"
-                            type="email"
-                            name="email"
-                            required
-                        />
-                    </div>
-                    <div>
-                        Vorname<input type="text" name="firstname" required />
-                    </div>
-                    <div>
-                        Nachname<input type="text" name="lastname" required />
-                    </div>
-                    <div>
-                        Anmeldung von Begleitpersonen<br /><i
-                            >(max. 3 weitere Personen aus dem eigenen
-                            Hausstand)</i
-                        >
-                        <div class="select-wrapper">
-                            <select name="companions" required>
-                                <option value="" disabled selected>
-                                    Bitte auswählen...
-                                </option>
-                                <option value="0">Keine Begleitperson</option>
-                                <option value="1">1 Begleitperson</option>
-                                <option value="2">2 Begleitpersonen</option>
-                                <option value="3">3 Begleitpersonen</option>
-                            </select>
-                        </div>
-                    </div>
-                    <label
-                        ><input
-                            type="checkbox"
-                            name="privacy"
-                            required
-                        /><span class="checkbox"></span>Ich habe den
-                        untenstehenden Datenschutzhinweis zur Kenntnis
-                        genommen.</label
-                    >
-                    <button type="submit">Anmelden</button>
-                </form>
-            </main>
-            <aside>
-                <p><b>Hinweis zum Datenschutz:</b></p>
-                <p>
-                    Wir erheben deine Daten zum Zweck der
-                    Kontaktpersonenermittlung im Fall einer festgestellten
-                    Infektion mit dem Coronavirus SARS-CoV-2. Die Verarbeitung
-                    erfolgt zum Schutz lebenswichtiger Interessen und beruht auf
-                    der Rechtsgrundlage des § 6 Abs. 1 lit. e KDG.
-                </p>
-                <p>
-                    Die erhobenen Daten sind den zuständigen Gesundheitsbehörden
-                    auf deren Verlangen hin zu übermitteln, soweit dies zur
-                    Kontaktpersonenermittlung im Fall einer festgestellten
-                    Infektion mit dem Coronavirus SARS-CoV-2 erforderlich ist.
-                </p>
-                <p>
-                    Die Daten werden vier Wochen nach dem Gottesdienst gelöscht.
-                </p>
-                <p>
-                    Weitere Informationen findest du in unserer
-                    <a
-                        href="http://www.bdkj-muenchen.de/menue-footer/datenschutzerklaerung"
-                        target="_blank"
-                        rel="noopener"
-                        >Datenschutzerklärung</a
-                    >.
-                </p>
-            </aside>
-            <footer>
-                <p><b>Veranstalter:</b></p>
-                <p>
-                    Jugendstellen Trudering, Bogenhausen, Giesing
-                    <a
-                        href="https://www.jugendstelle-trudering.de/wir-ueber-uns/impressum"
-                        target="_blank"
-                        rel="noopener"
-                        >Impressum</a
-                    >
-                </p>
-            </footer>
-        </div>
-    </body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Meterstab</title>
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('meterstab.static', filename='css/normalize.css') }}" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('meterstab.static', filename='css/style.css') }}" />
+  </head>
+  <body>
+    <div id="site-inner">
+      <header>
+        <h1>Meterstab – Dein Karwochenbegleiter – Gottesdienst-Aktionen in der Jugendkirche</h1>
+        <p>
+          Länge Di 30.3. 17:30 – 19:30 Gestaltungszeit für Deinen Meterstab (Gottesdienst) <br />
+          Tiefe: Fr 02.04. 10:00 – 12:00 Uhr Zeitraum für Kreuzgestaltung (Gottesdienst)
+        </p>
+        <p>Aufgrund der staatlichen Maßnahmen zur Eindämmung des Coronavirus ist die Zahl der Gottesdienst-Besucher*innen beschränkt. Die Teilnahme ist nur nach vorheriger Anmeldung zulässig.</p>
+        <p><b>Hinweis:</b> Wenn Du an beiden Veranstaltungen teilnehmen möchtest, fülle bitte für jeden Tag ein seperates Fromular aus.</p>
+        <p><b>Wichtig:</b> Die Anmeldung ist verbindlich. Solltest du doch nicht teilnehmen können oder wollen, dann storniere bitte deine Plätze über den Link in der Bestätigungsmail.</p>
+      </header>
+      <main>
+        <form method="POST">
+          <div>
+            Für welchen Tag möchtest du dich anmelden?
+            <div class="radio">
+              <div>
+                <input type="radio" id="time1" name="time" value="1" required /><label for="time1">Dienstag<br /><i>{{ count_time1}} Plätze frei</i></label>
+              </div>
+              <div>
+                <input type="radio" id="time2" name="time" value="2" required /><label for="time2">Freitag<br /><i>{{ count_time2}} Plätze frei</i></label>
+              </div>
+            </div>
+          </div>
+          <div>E-Mail-Adresse<input id="test" type="email" name="email" required /></div>
+          <div>Vorname<input type="text" name="firstname" required /></div>
+          <div>Nachname<input type="text" name="lastname" required /></div>
+          <div>
+            Anmeldung von Begleitpersonen<br /><i>(max. 3 weitere Personen aus dem eigenen Hausstand)</i>
+            <div class="select-wrapper">
+              <select name="companions" required>
+                <option value="" disabled selected>Bitte auswählen...</option>
+                <option value="0">Keine Begleitperson</option>
+                <option value="1">1 Begleitperson</option>
+                <option value="2">2 Begleitpersonen</option>
+                <option value="3">3 Begleitpersonen</option>
+              </select>
+            </div>
+          </div>
+          <label><input type="checkbox" name="privacy" required /><span class="checkbox"></span>Ich habe den untenstehenden Datenschutzhinweis zur Kenntnis genommen.</label>
+          <button type="submit">Anmelden</button>
+        </form>
+      </main>
+      <aside>
+        <p><b>Hinweis zum Datenschutz:</b></p>
+        <p>
+          Wir erheben deine Daten zum Zweck der Kontaktpersonenermittlung im Fall einer festgestellten Infektion mit dem Coronavirus SARS-CoV-2. Die Verarbeitung erfolgt zum Schutz lebenswichtiger
+          Interessen und beruht auf der Rechtsgrundlage des § 6 Abs. 1 lit. e KDG.
+        </p>
+        <p>
+          Die erhobenen Daten sind den zuständigen Gesundheitsbehörden auf deren Verlangen hin zu übermitteln, soweit dies zur Kontaktpersonenermittlung im Fall einer festgestellten Infektion mit dem
+          Coronavirus SARS-CoV-2 erforderlich ist.
+        </p>
+        <p>Die Daten werden vier Wochen nach dem Gottesdienst gelöscht.</p>
+        <p>
+          Weitere Informationen findest du in unserer
+          <a href="http://www.bdkj-muenchen.de/menue-footer/datenschutzerklaerung" target="_blank" rel="noopener">Datenschutzerklärung</a>.
+        </p>
+      </aside>
+      <footer>
+        <p><b>Veranstalter:</b></p>
+        <p>
+          Jugendstellen Trudering, Bogenhausen, Giesing
+          <a href="https://www.jugendstelle-trudering.de/wir-ueber-uns/impressum" target="_blank" rel="noopener">Impressum</a>
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
